--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -19,16 +19,16 @@
     <ion-content>
       <ion-list>
         <ion-item menu-close ng-click="login()">
-          Login
+          About Us
         </ion-item>
         <ion-item menu-close href="#/app/search">
-          Search
+          Terms Of Use
         </ion-item>
         <ion-item menu-close href="#/app/browse">
-          Browse
+          Support
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
-          Playlists
+          Advertising
         </ion-item>
       </ion-list>
     </ion-content>
