Nav & routes update

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,17 +18,17 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close ng-click="login()">
+        <ion-item menu-close href="#/app/aboutus">
           About Us
         </ion-item>
-        <ion-item menu-close href="#/app/search">
+        <ion-item menu-close href="#/app/tou">
           Terms Of Use
         </ion-item>
-        <ion-item menu-close href="#/app/browse">
+        <ion-item menu-close href="#/app/support">
           Support
         </ion-item>
-        <ion-item menu-close href="#/app/playlists">
-          Advertising
+          <ion-item menu-close href="#/app/ads">
+          Ads
         </ion-item>
       </ion-list>
     </ion-content>
