--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,7 +14,7 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>
+<!--     <ion-searchbar (ionInput)="getItems($event)"></ion-searchbar>-->
     </ion-header-bar>
     <ion-content>
       <ion-list>
