--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,34 +18,34 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/aboutus">
+        <ion-item menu-close href="#/app/my-courses">
         My Courses
         </ion-item>
-        <ion-item menu-close href="#/app/tou">
+        <ion-item menu-close href="#/app/settings">
         Settings
         </ion-item>
-        <ion-item menu-close href="#/app/support">
+        <ion-item menu-close href="#/app/signin">
         Sign In
         </ion-item>
-        <ion-item menu-close href="#/app/ads">
+        <ion-item menu-close href="#/app/missing-courses">
         Missing Course
         </ion-item>
-        <ion-item menu-close href="#/app/ads">
+        <ion-item menu-close href="#/app/share">
         Share
         </ion-item>
-        <ion-item menu-close href="#/app/ads">
+        <ion-item menu-close href="#/app/golf-stats">
         Golf Stats
         </ion-item>
-        <ion-item menu-close href="#/app/ads">
+        <ion-item menu-close href="#/app/upgrade">
         Upgrade to Pro
         </ion-item>
-        <ion-item menu-close href="#/app/ads">
+        <ion-item menu-close href="#/app/rate">
         Rate our App
         </ion-item>
-        <ion-item menu-close href="#/app/ads">
+        <ion-item menu-close href="#/app/support">
         Support
         </ion-item>
-        <ion-item menu-close href="#/app/ads">
+        <ion-item menu-close href="#/app/suggested-apps">
         Suggested Apps
         </ion-item>  
       </ion-list>
