Added routes and files for menu items

--- a/www/templates/missing-courses.html
+++ b/www/templates/missing-courses.html
@@ -1,5 +1,5 @@
-<ion-view view-title="Ads">
+<ion-view view-title="Missing Courses">
   <ion-content>
-    <h1>Ads</h1>
+    
   </ion-content>
 </ion-view>
