new page skeletons
modified menu as needed too.

--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -39,15 +39,21 @@
         <ion-item menu-close href="#/app/upgrade">
         Upgrade to Pro
         </ion-item>
+        <ion-item menu-close href="#/app/news">
+        News
+        </ion-item>
         <ion-item menu-close href="#/app/rate">
         Rate our App
         </ion-item>
         <ion-item menu-close href="#/app/support">
         Support
         </ion-item>
+        <ion-item menu-close href="#/app/videotips">
+        Video Tips
+        </ion-item>
         <ion-item menu-close href="#/app/suggested-apps">
         Suggested Apps
-        </ion-item>  
+        </ion-item>
       </ion-list>
     </ion-content>
   </ion-side-menu>
