--- a/www/templates/news.html
+++ b/www/templates/news.html
@@ -1,9 +1,9 @@
 <ion-view view-title="News">
   <ion-content>
     <ul class="list">
-        <li class="item" ng-repeat="newsArticle in newsArticles" ng-click="selectArticle(newsArticle, $index)">
-          <h3>{{newsArticle.title}}</h3>
-          {{newsArticle.details}}
+        <li class="item" ng-repeat="article in articles" ng-click="selectArticle(article, $index)">
+          <h3>{{article.title}}</h3>
+          {{article.details}}
         </li>
     </ul>
   </ion-content>
