--- a/www/templates/article.html
+++ b/www/templates/article.html
@@ -1,5 +1,5 @@
-<ion-view view-title="News Article">
+<ion-view view-title="{{selectedArticle.title}}">
   <ion-content>
-
+    {{selectedArticle.details}}
   </ion-content>
 </ion-view>
