more detailed tip content view

--- a/www/templates/tip.html
+++ b/www/templates/tip.html
@@ -1,5 +1,7 @@
-<ion-view view-title="View Tip">
+<ion-view view-title="{{selectedTip.title}}">
   <ion-content>
-
+    <!--   DISPLAY VIDEO CONTENT HERE   -->
+    <br/>
+    {{selectedTip.description}}
   </ion-content>
 </ion-view>
