added title model reference

--- a/www/templates/prizedraw.html
+++ b/www/templates/prizedraw.html
@@ -6,7 +6,7 @@
       <div class="list">
          <label class="item item-input item-floating-label">
           <span class="input-label">Title</span>
-          <input type="text" placeholder="Title">
+          <input type="text" placeholder="Title" ng-model="entry.title">
          </label>
 
          <label class="item item-input item-floating-label">
