--- a/www/templates/prizedraw.html
+++ b/www/templates/prizedraw.html
@@ -1,7 +1,8 @@
 <ion-view view-title="Prize Draw">
   <ion-content>
     <h1>GolfWeather Prize Draw</h1>
-    {{draw.description}}
+    <h3>{{draw.title}}</h3>
+    <p>{{draw.description}}</p>
     <form>
       <div class="list">
          <label class="item item-input item-floating-label">
