--- a/www/css/style.css
+++ b/www/css/style.css
@@ -1,1 +1,76 @@
 /* Empty. Add your own CSS if you like */
+
+/*.toggle-wrapper {
+  display: inline-block;
+  width: 100%;
+  margin-bottom: -20px;
+}
+
+.toggle-question {
+  font-size: $default-font-size -3;
+  float: left;
+  margin: 10px;
+}
+
+.toggle-text {
+  width: 10%;
+  color: $bright-yellow;
+
+}
+
+.meds-toggle {
+  margin: 10px;
+  width: 5%;
+  float: right;
+  border: none;
+  height: 50px;
+}*/
+
+/*#map {
+  width: 100%;
+  height: 100%;
+}
+
+.scroll {
+  height: 100%;
+}*/
+.toggle-text > .track {
+
+  width: auto;
+  padding-left: 25px;
+  padding-right: 25px;
+
+}
+
+.toggle-text .handle {
+  left: 7px;
+}
+
+.toggle-text .handle-text {
+  font-size: 24px;
+  color: white;
+
+  position: absolute;
+  top: -4px;
+
+}
+
+.toggle-text .handle-text-false {
+  left: 36px;
+}
+
+.toggle-text input:checked + .track .handle {
+  -webkit-transform: none;
+  -moz-transform: none;
+  transform: none;
+  left: calc(100% - 34px);
+
+/*  -webkit-transform: translate3d(0, 0,0);*/
+}
+.track-text {
+  line-height: 26px;
+  color: white;
+  font-size: 24px;
+  padding-left: 10px;
+  padding-right: 10px;
+}
