--- a/www/templates/settings.html
+++ b/www/templates/settings.html
@@ -14,7 +14,7 @@
         <div class="input-label">
           Temperature
         </div>
-        <select ng-model='units.temp'>
+        <select ng-model='units.temp' ng-change="UserSettingsUpdate()">
           <option value='metric' >Metric</option>
           <option value='imperial' >Imperial</option>
         </select>
@@ -23,7 +23,7 @@
         <div class="input-label">
           Clock
         </div>
-        <select ng-model='units.clock'>
+        <select ng-model='units.clock' ng-change="UserSettingsUpdate()">
           <option value='24'>24 Hour</option>
           <option value='12'>12 Hour</option>
         </select>
@@ -34,9 +34,9 @@
         Home View
       </div>
       <ion-list>
-        <ion-radio ng-model="homeView" ng-value="'MC'">My Courses</ion-radio>
-        <ion-radio ng-model="homeView" ng-value="'LVC'">Last Visited Course</ion-radio>
-        <ion-radio ng-model="homeView" ng-value="'FC'">Favourite Course</ion-radio>
+        <ion-radio ng-model="homeView" ng-value="'MC'" ng-change="UserSettingsUpdate()">My Courses</ion-radio>
+        <ion-radio ng-model="homeView" ng-value="'LVC'" ng-change="UserSettingsUpdate()">Last Visited Course</ion-radio>
+        <ion-radio ng-model="homeView" ng-value="'FC'" ng-change="UserSettingsUpdate()">Favourite Course</ion-radio>
       </ion-list>
       <button class="button button-block button-energized">Customize Alerts</button>
       <button class="button button-block button-outline button-positive">Help</button>
