added nav features to buttons

--- a/www/templates/search-courses.html
+++ b/www/templates/search-courses.html
@@ -1,11 +1,11 @@
 <ion-view view-title="Search Courses">
   <ion-content>
   <!-- Search Selections -->
-  <br />    
+  <br />
     <div class="button-bar">
-      <a class="button">Search</a>
-      <a class="button">Directory</a>
-      <a class="button">Near Me</a>
+      <a class="button button-calm">Search</a>
+      <a class="button" ui-sref="app.course-directory">Directory</a>
+      <a class="button" ui-sref="app.courses-nearby">Near Me</a>
     </div><br />
   <!-- Search Inputs -->
     <div class="list">
