--- a/www/templates/course-directory-courses.html
+++ b/www/templates/course-directory-courses.html
@@ -4,8 +4,8 @@
   <!-- Search Inputs -->
     <div class="list">
       <!-- show the different countries -->
-      <li class="item item-icon-right" ng-repeat="country in continentCountries" ng-click="selectCountry(country, $index)">
-        {{country.name}}
+      <li class="item item-icon-right" ng-repeat="course in regionCourses" > <!-- navigate to the forecast from here -->
+        {{course.name}}
       </li>
     </div>
   </ion-content>
