--- a/www/templates/search-courses.html
+++ b/www/templates/search-courses.html
@@ -10,8 +10,8 @@
   <!-- Search Inputs -->
     <form>
       <div class="list">
-        <label class="item item-input item-stacked-label">
-          <span class="input-label">Country</span>
+        <label class="item item-input item-select">
+          <div class="input-label">Country</div>
           <select ng-model="search.country">
             <option ng-repeat="country in countries" value="{{country.id}}">
               {{country.name}}
