Forecast update, pushing current_json data from course to service

--- a/www/templates/forecast.html
+++ b/www/templates/forecast.html
@@ -1,5 +1,5 @@
 <ion-view view-title="{{selectedCourse.name}}">
   <ion-content>
-      <h3><i class="icon ion-cloud"> {{selectedCourse.temp}}</i></h3>
+      <h3><i class="icon ion-cloud"> {{selectedCourse.current_json}}</i></h3>
   </ion-content>
 </ion-view>
