--- a/www/templates/course-directory-regions.html
+++ b/www/templates/course-directory-regions.html
@@ -2,6 +2,7 @@
   <ion-content>
   <!-- Search Selections -->
   <!-- Search Inputs -->
+    <h3 ng-show="!countryRegions.length">No courses found</h3>
     <div class="list">
       <!-- show the different countries -->
       <li class="item item-icon-right" ng-repeat="region in countryRegions" ng-click="selectRegion(region, $index)">
