--- a/www/templates/course-directory-subregions.html
+++ b/www/templates/course-directory-subregions.html
@@ -2,6 +2,7 @@
   <ion-content>
   <!-- Search Selections -->
   <!-- Search Inputs -->
+    <h3 ng-show="!regionSubregions.length">No courses found</h3>
     <div class="list">
       <!-- show the different countries -->
       <li class="item item-icon-right" ng-repeat="region in regionSubregions" ng-click="selectSubregion(region, $index)">
