--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,6 +18,9 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
+        <ion-item menu-close href="#/app/search">
+        Search
+        </ion-item>
         <ion-item menu-close href="#/app/my-courses">
         My Courses
         </ion-item>
