--- a/www/templates/search-courses.html
+++ b/www/templates/search-courses.html
@@ -13,7 +13,7 @@
         <label class="item item-input item-select">
           <div class="input-label">Country</div>
           <select ng-model="search.country">
-            <option ng-repeat="country in countries" value="{{country.id}}">
+            <option ng-repeat="country in countries | orderBy : 'name'" value="{{country.id}}">
               {{country.name}}
             </option>
           </select>
