Hide inactive menu items

--- a/www/templates/search-courses.html
+++ b/www/templates/search-courses.html
@@ -23,7 +23,7 @@
           <input type="text" placeholder="Course Name" ng-model="search.keyword">
         </label>
       <!-- Submit button -->
-        <button class="button button-block button-positive" ui-sref="app.search-results({countryID: search.country, keyword: search.keyword})">
+        <button class="button button-bar button-calm" ui-sref="app.search-results({countryID: search.country, keyword: search.keyword})">
             Search
         </button>
       </div>
