--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -27,6 +27,9 @@
         <ion-item menu-close href="#/app/settings">
         Settings
         </ion-item>
+        <ion-item menu-close href="#/app/compass">
+        Compass
+        </ion-item>
 <!--
         <ion-item menu-close href="#/app/signin">
         Sign In
