--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -30,6 +30,9 @@
         <ion-item menu-close href="#/app/compass">
         Compass
         </ion-item>
+        <ion-item menu-close href="#/app/slope-reader">
+        Slope Reader
+        </ion-item>
 <!--
         <ion-item menu-close href="#/app/signin">
         Sign In
