--- a/www/templates/slope-reader.html
+++ b/www/templates/slope-reader.html
@@ -1,5 +1,8 @@
 <ion-view view-title="Compass">
   <ion-content>
       <!-- display information regarding the slope direction and pitch -->
+      <p>X: {{device.X}}</p>
+      <p>Y: {{device.Y}}</p>
+      <p>Z: {{device.Z}}</p>
   </ion-content>
 </ion-view>
