--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -18,7 +18,7 @@
     </ion-header-bar>
     <ion-content>
       <ion-list>
-        <ion-item menu-close href="#/app/search">
+        <ion-item menu-close href="#/app/search-courses">
         Search
         </ion-item>
         <ion-item menu-close href="#/app/my-courses">
