--- a/www/templates/search-courses.html
+++ b/www/templates/search-courses.html
@@ -1,4 +1,4 @@
-<ion-view view-title="Search Courses">
+<ion-view view-title="">
   <ion-content>
   <!-- Search Selections -->
     <br />
@@ -21,9 +21,9 @@
         <label class="item item-input item-stacked-label">
           <span class="input-label">Course</span>
           <input type="text" placeholder="Course Name" ng-model="search.keyword">
-        </label>
+        </label><br/>
       <!-- Submit button -->
-        <button class="button button-bar button-calm" ui-sref="app.search-results({countryID: search.country, keyword: search.keyword})">
+        <button class="button button-block button-calm" ui-sref="app.search-results({countryID: search.country, keyword: search.keyword})">
             Search
         </button>
       </div>
